<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MapTheTrip</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="record_trip">Record Trip</string>
    <string name="travel_tab_label">Travel</string>
    <string name="gas_tab_label">Gas</string>
    <string name="start_trip_button_label">Start Trip</string>
    <string name="pause_trip_button_label">Pause Trip</string>
    <string name="rest_tab_label">Rest</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="install_google_services_title">Install Google Play Services</string>
    <string name="install_google_services_message">Please install the latest Google Play Services to use this app</string>
    <string name="got_it">Got it</string>
    <string name="duration_label">Duration</string>
    <string name="duration_default_value" translateble="false">00:00:00</string>
    <string name="duration_units">min</string>
    <string name="distance_units">miles</string>
    <string name="finish_trip_button_label">Slide to Finish</string>
    <string name="resume_trip_button_label">Resume</string>
    <string name="title_activity_input">Record Trip</string>
    <string name="save_trip_button_label">Save Trip</string>
    <string name="discard_button_label">Discard</string>
    <string name="discard_trip_dialog_title">Discard the trip?</string>
    <string name="discard_trip_dialog_message">You\'ll lose the data about it.</string>
    <string name="discard">Discard</string>
    <string name="distance_label">Distance</string>
    <string name="title_activity_summary">Summary</string>
    <string name="total_distance_label">Total distance:</string>
    <string name="total_distance_test_value">70,23</string>
    <string name="total_distance_units">miles</string>
    <string name="trip_name_default_value">Trip on 12 dec, 16:50</string>
    <string name="distance_default_value">0.0</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Log In</string>
    <string name="create_account_label">Don\'t Have An Account? Sign Up!</string>
    <string name="title_activity_sign_up">Create Account</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="email_hint">Email Address</string>
    <string name="username_missing">Please enter your Username</string>
    <string name="password_missing">Please enter your Password</string>
    <string name="email_missing">Please enter your Email</string>
    <string name="trip_was_label">Trip was</string>
    <string name="notes_field_hint">Additional notes</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_units_title">Units</string>
    <string name="units_miles">Miles</string>
    <string name="units_kilometers">Kilometers</string>
    <string name="recording_label">Recording</string>
    <string name="pause_label">Paused</string>
    <string name="coming_soon">Coming soon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_stats">StatsActivity</string>

</resources>
