<LinearLayout
    style="@style/LoginBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="sheyko.aleksey.mapmytrip.ui.LoginActivity">

    <ImageView
        style="@style/LoginLogoText"
        android:src="@drawable/logo_text"/>

    <LinearLayout
        style="@style/LoginFieldsContainer">

        <EditText
            android:id="@+id/usernameField"
            style="@style/LoginEditText"
            android:hint="@string/username_hint"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionNext"/>

        <requestFocus/>

        <FrameLayout
            style="@style/SeparatorLight"/>

        <EditText
            android:id="@+id/passwordField"
            style="@style/LoginEditText"
            android:hint="@string/password_hint"
            android:imeOptions="actionDone"/>

    </LinearLayout>


    <Button
        android:id="@+id/loginButton"
        style="@style/LoginButton"
        android:text="@string/login_button_label"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/goToSignUpButton"
        style="@style/LoginHintToSignUpLabel"
        android:text="@string/create_account_label"/>

</LinearLayout>
