<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/list"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/trip_list_item_bg"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/trip_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left"
        android:paddingTop="14dp"
        android:paddingLeft="14dp"
        android:singleLine="true"
        android:text="@string/trip_name_default_value"
        android:textColor="#000"
        android:textSize="16sp"/>

    <!--Separator-->
    <FrameLayout
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#efefef"/>

    <LinearLayout
        android:layout_width="115dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingRight="8dp"
        >

        <TextView
            android:id="@+id/trip_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_time"
            android:text="@string/duration_default_value"
            android:textColor="#8e8e93"
            android:textSize="14sp"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/trip_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/distance_default_value"
            android:textColor="#8e8e93"
            android:textSize="14sp"
            android:singleLine="true"/>

    </LinearLayout>

</LinearLayout>
