<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="sheyko.aleksey.mapthetrip.ui.activities.StatsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Total distance container-->
        <LinearLayout
            style="@style/total_distance_bar">

            <TextView
                style="@style/total_distance_label"
                android:text="@string/total_distance_label"/>

            <LinearLayout
                style="@style/TotalDistanceValueContainer">

                <TextView
                    android:id="@+id/total_distance_value"
                    style="@style/total_distance_value"
                    android:text="@string/total_distance_test_value"
                    android:textSize="24sp"/>

                <TextView
                    style="@style/total_distance_value"
                    android:text="@string/total_distance_units"
                    android:textSize="20sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="8dp"
            android:background="#fefefe"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="State Code"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Miles Driven"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            </LinearLayout>

        <ListView
            android:id="@+id/stats_list"
            style="@style/TripList"/>

    </LinearLayout>

</RelativeLayout>
